# travesim_adapters

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_000001_000004.html  dir_000002_000004.html  dir_000003_000004.html  dir_000009_000007.html  dir_000009_000011.html  dir_000010_000007.html  dir_000014_000004.html  dir_000015_000004.html  dir_000016_000004.html  dir_000017_000004.html  dir_000018_000004.html  dir_000019_000004.html  dir_000020_000004.html  dir_000021_000004.html  dir_000022_000004.html  dir_000023_000004.html  dir_000024_000004.html  dir_000025_000004.html  dir_000027_000004.html  dir_000028_000004.html  dir_008ba6cb71e2c02d515844436773d74d.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_031c4fc26031de218e3c67acfca35073.js  dir_031c4fc26031de218e3c67acfca35073_dep.map  dir_031c4fc26031de218e3c67acfca35073_dep.md5  dir_048a84f5244870871e1f5dedcc1cc7e5.html  dir_048a84f5244870871e1f5dedcc1cc7e5.js  dir_048a84f5244870871e1f5dedcc1cc7e5_dep.map  dir_048a84f5244870871e1f5dedcc1cc7e5_dep.md5  dir_0724f764e32cdc979c19bf6bae3e0512.html  (+174 more)
.github/workflows/: docker.yml  doxygen.yml
cfg/: Replacer.cfg  Teams.cfg  Vision.cfg  replacer.cfg
config/: network.yml  rosconsole.conf  rqt.perspective
d0/d19/: vision__sender_8cpp.html  vision__sender_8cpp_source.html
d0/d1f/: team__command_8cpp__incl.map  team__command_8cpp__incl.md5
d0/d46/: replacer__configurer_8hpp.html  replacer__configurer_8hpp_source.html
d0/d61/: teams__configurer_8hpp.html  teams__configurer_8hpp_source.html
d0/d64/: classtravesim_1_1ros__side_1_1VisionReceiver.html  classtravesim_1_1ros__side_1_1VisionReceiver.js  classtravesim_1_1ros__side_1_1VisionReceiver_a44c3fc45dbca506e18e3759a4f60ab44_icgraph.map  classtravesim_1_1ros__side_1_1VisionReceiver_a44c3fc45dbca506e18e3759a4f60ab44_icgraph.md5  classtravesim_1_1ros__side_1_1VisionReceiver_a9a0aba6d04e9df9dfc9f2092274623ea_icgraph.map  classtravesim_1_1ros__side_1_1VisionReceiver_a9a0aba6d04e9df9dfc9f2092274623ea_icgraph.md5  classtravesim_1_1ros__side_1_1VisionReceiver_ac45ab792e8f9f740cf8601f1eacd866f_cgraph.map  classtravesim_1_1ros__side_1_1VisionReceiver_ac45ab792e8f9f740cf8601f1eacd866f_cgraph.md5
d0/d78/: vision__configurer_8hpp.html  vision__configurer_8hpp_source.html
d0/d84/: receiver_8hpp__incl.map  receiver_8hpp__incl.md5
d0/d98/: gazebo__services_8mock_8cpp__incl.map  gazebo__services_8mock_8cpp__incl.md5
d0/d9c/: multicast__receiver__example_8cpp.html  multicast__receiver__example_8cpp.js  multicast__receiver__example_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  multicast__receiver__example_8cpp_source.html
d0/da2/: adapter__configurer_8hpp__dep__incl.map  adapter__configurer_8hpp__dep__incl.md5
d0/db9/: classtravesim_1_1TeamCommand-members.html
d0/dc0/: replacer__configurer_8hpp__dep__incl.map  replacer__configurer_8hpp__dep__incl.md5  team__receiver_8cpp__incl.map  team__receiver_8cpp__incl.md5
d0/dca/: replacer__sender_8hpp__dep__incl.map  replacer__sender_8hpp__dep__incl.md5
d0/dde/: vision__receiver__example_8cpp__incl.map  vision__receiver__example_8cpp__incl.md5
d0/de4/: robot__state_8cpp__incl.map  robot__state_8cpp__incl.md5
d0/df1/: receiver_8hpp__dep__incl.map  receiver_8hpp__dep__incl.md5
d0/df2/: classtravesim_1_1udp_1_1MulticastReceiver__coll__graph.md5
d1/d21/: team__receiver_8hpp__dep__incl.map  team__receiver_8hpp__dep__incl.md5
d1/d23/: multicast__sender__example_8cpp.html  multicast__sender__example_8cpp.js  multicast__sender__example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  multicast__sender__example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  multicast__sender__example_8cpp_source.html
d1/d3e/: replacer__configurer_8cpp__incl.map  replacer__configurer_8cpp__incl.md5
d1/d4b/: namespacetravesim.html  namespacetravesim.js  namespacetravesim_a05f869547c07b49b722c2afb6c1967ef_cgraph.map  namespacetravesim_a05f869547c07b49b722c2afb6c1967ef_cgraph.md5  namespacetravesim_a05f869547c07b49b722c2afb6c1967ef_icgraph.map  namespacetravesim_a05f869547c07b49b722c2afb6c1967ef_icgraph.md5  namespacetravesim_a32624f8212a09572f8587ea017f67d30_icgraph.map  namespacetravesim_a32624f8212a09572f8587ea017f67d30_icgraph.md5  namespacetravesim_ad051590d1f7aa8c749f82ed36c4b2cba_icgraph.map  namespacetravesim_ad051590d1f7aa8c749f82ed36c4b2cba_icgraph.md5
d1/d4e/: teams__sender_8cpp.html  teams__sender_8cpp.js  teams__sender_8cpp_source.html
d1/d51/: classtravesim_1_1VisionConfigurer.html  classtravesim_1_1VisionConfigurer.js  classtravesim_1_1VisionConfigurer_a03e304ac5b9b5867eb5c4a03730fef07_cgraph.map  classtravesim_1_1VisionConfigurer_a03e304ac5b9b5867eb5c4a03730fef07_cgraph.md5  classtravesim_1_1VisionConfigurer_a03e304ac5b9b5867eb5c4a03730fef07_icgraph.map  classtravesim_1_1VisionConfigurer_a03e304ac5b9b5867eb5c4a03730fef07_icgraph.md5  classtravesim_1_1VisionConfigurer_a5f6f6a9bc57fca4405385c866a1b0525_icgraph.map  classtravesim_1_1VisionConfigurer_a5f6f6a9bc57fca4405385c866a1b0525_icgraph.md5
d1/d79/: adapter__configurer_8hpp.html  adapter__configurer_8hpp.js  adapter__configurer_8hpp_source.html
d1/da7/: robot__state_8hpp__incl.map  robot__state_8hpp__incl.md5
d1/daf/: classtravesim_1_1ros__side_1_1TeamsSender.html  classtravesim_1_1ros__side_1_1TeamsSender.js  (+2 more)
d1/db0/: multicast__receiver_8hpp__incl.map  (+1 more)
launch/: adapters.launch  test_vision_adapter.launch
proto/: CMakeLists.txt  README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  (+67 more)
test/: replacer_sender.test  test_vision_adapter.cpp  vision_adapter.test  vision_receiver.test
(+694 files in other folders)
