<?xml version="1.0"?>
<package format="2">
  <name>travesim_adapters</name>
  <version>0.0.0</version>
  <description>The travesim_adapters package</description>

  <maintainer email="comp@thunderatz.org">ThundeRatz</maintainer>

  <license>MIT</license>

  <url type="website">https://https://thunderatz.org/</url>
  <url type="repository">https://github.com/ThundeRatz/travesim_adapters.git</url>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>boost</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>protobuf-dev</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>protobuf-dev</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
  </export>
</package>
